<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Generic or shared strings -->
    <string name="app_name">CrunchBase</string>
    <string name="splash_image">Splash</string>
    <string name="splash_bottom">Unofficial CrunchBase app for Android</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="refreshing">Refreshing…</string>
    <string name="refreshed">Refreshed\u0020</string>
    <string name="refresh_failed">
        Refresh failed. Check your connection, then try again.
    </string>
    <string name="no_items">Nothing found. Refresh to retry.</string>
    <string name="unknown">\u003F</string>
    <string name="more">More</string>
    <string name="less">Less</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>

    <!-- Menu strings -->
    <string name="menu_loadImagesSwitch">Fetch images</string>
    <string name="menu_cacheImagesSwitch">Cache images</string>
    <string name="menu_cacheDataSwitch">Cache data</string>
    <string name="menu_cacheClearItem">Clear cache</string>
    <string name="clear_text">
        Are you sure you want to clear all cache data?
    </string>
    <string name="clearing_text">Clearing cache…</string>
    <string name="menu_aboutItem">About</string>
    <string name="about_dismiss">Dismiss</string>
    <string name="about_text">
        \n
        <b>Unofficial CrunchBase app for Android</b>\n\n
        Version: 1.0.0\n
        Author: Andrei Mihu
        \n\n
        This is an unofficial application not affiliated with CrunchBase
        in any way. This is a free and open source application. Comments, bug
        reports, feature requests and code contributions are all most welcome.
        \n\n
        The project repository can be found here:\n
        https://github.com/zyro/crunchbase-android
        \n
    </string>

    <!-- Home activity strings -->
    <string name="trending_header">Trending</string>
    <string name="recent_header">Recent</string>
    <string name="biggest_header">Top This Year</string>
    <string name="details_view">Details</string>
    <string name="trending_points_plural">points</string>
    <string name="trending_points_singular">point</string>

    <!-- Company activity strings -->
    <string name="company_header">Company</string>
    <string name="company_image">Company Image</string>
    <string name="company_founded">Founded:\u0020</string>
    <string name="company_employees">Employees:\u0020</string>
    <string name="company_total_money">Total money raised:\u0020</string>
    <string name="company_presence">Presence</string>
    <string name="company_crunchbase_url"><u>Crunchbase</u></string>
    <string name="company_blog_url"><u>Blog</u></string>
    <string name="company_twitter"><u>Twitter</u></string>
    <string name="company_email"><u>Email</u></string>
    <string name="company_overview">Overview</string>
    <string name="company_people">Key People</string>

    <!-- Person activity strings -->
    <string name="person_header">Person</string>
    <string name="person_image">Person Image</string>
    <string name="person_born">Born:\u0020</string>
    <string name="person_affiliation">Affiliation:\u0020</string>
    <string name="person_presence">Presence</string>
    <string name="person_crunchbase_url"><u>Crunchbase</u></string>
    <string name="person_blog_url"><u>Blog</u></string>
    <string name="person_twitter"><u>Twitter</u></string>
    <string name="person_facebook"><u>Facebook</u></string>
    <string name="person_linkedin"><u>LinkedIn</u></string>
    <string name="person_overview">Overview</string>
    <string name="person_companies">Key Companies</string>
</resources>