<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:panel="http://schemas.android.com/apk/res/com.github.zyro.crunchbase"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

    <TextView android:id="@+id/companyEmpty"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@android:color/black"
              android:text="@string/refreshing"
              android:textSize="18sp"
              android:layout_centerInParent="true"/>

    <ScrollView android:id="@+id/companyContents"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:background="@android:color/white"
                android:visibility="gone">

        <LinearLayout android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

            <TextView android:id="@+id/companyHeaderLabel"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/company_header"
                      android:gravity="center"
                      android:textColor="@android:color/white"
                      android:background="@color/crunchbase"
                      android:padding="4dp"/>

            <LinearLayout android:id="@+id/companyHeader"
                          android:orientation="horizontal"
                          android:layout_height="wrap_content"
                          android:layout_width="fill_parent">

                <ImageView android:id="@+id/companyImage"
                           android:src="@drawable/content_picture"
                           android:contentDescription="@string/company_image"
                           android:layout_height="110dp"
                           android:layout_width="110dp"
                           android:padding="2dp"
                           android:paddingRight="8dp"
                           android:scaleType="centerInside"/>

                <LinearLayout android:orientation="vertical"
                              android:layout_height="wrap_content"
                              android:layout_width="fill_parent"
                              android:padding="4dp"
                              android:layout_gravity="center_vertical">

                    <TextView android:id="@+id/companyName"
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              android:textSize="15sp"
                              android:paddingBottom="4dp"
                              android:textColor="@android:color/black"/>

                    <TextView android:id="@+id/companyUrl"
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              android:textSize="12sp"
                              android:textColor="@android:color/darker_gray"/>

                    <TextView android:id="@+id/companyFounded"
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              android:textSize="12sp"
                              android:textColor="@android:color/darker_gray"/>

                    <TextView android:id="@+id/companyEmployees"
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              android:textSize="12sp"
                              android:textColor="@android:color/darker_gray"/>

                    <TextView android:id="@+id/companyTotalMoneyRaised"
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              android:textSize="12sp"
                              android:textColor="@android:color/darker_gray"/>

                </LinearLayout>

            </LinearLayout>

            <TextView android:id="@+id/companyPresenceLabel"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/company_presence"
                      android:gravity="center"
                      android:textColor="@android:color/white"
                      android:background="@color/crunchbase"
                      android:padding="4dp"/>

            <TextView android:id="@+id/companyOverviewLabel"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/company_overview"
                      android:gravity="center"
                      android:textColor="@android:color/white"
                      android:background="@color/crunchbase"
                      android:padding="4dp"/>

            <com.github.zyro.crunchbase.util.ExpandablePanel
                    android:id="@+id/companyOverviewHolder"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    panel:animationDuration="500"
                    panel:collapsedHeight="75dp"
                    panel:content="@+id/companyOverview"
                    panel:handle="@+id/companyOverviewExpand">

                <TextView android:id="@+id/companyOverviewEmpty"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textColor="@android:color/black"
                          android:text="@string/company_overview_empty"
                          android:layout_centerInParent="true"/>

                <TextView android:id="@id/companyOverview"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:padding="2dp"
                          android:layout_alignParentTop="true"/>

                <TextView android:id="@id/companyOverviewExpand"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:layout_margin="2dp"
                        android:text="@string/more"
                        android:gravity="center"
                        android:background="@color/crunchbase_light_pressed"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"/>

            </com.github.zyro.crunchbase.util.ExpandablePanel>

            <TextView android:id="@+id/companyRawLabel"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:text="Raw Data"
                      android:gravity="center"
                      android:textColor="@android:color/white"
                      android:background="@color/crunchbase"
                      android:padding="4dp"/>

            <com.github.zyro.crunchbase.util.ExpandablePanel
                    android:id="@+id/companyRawHolder"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    panel:animationDuration="500"
                    panel:collapsedHeight="300dp"
                    panel:content="@+id/companyRaw"
                    panel:handle="@+id/companyRawExpand">

                <TextView android:id="@id/companyRaw"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:padding="2dp"
                          android:layout_alignParentTop="true"/>

                <TextView android:id="@id/companyRawExpand"
                          android:layout_width="80dp"
                          android:layout_height="wrap_content"
                          android:padding="2dp"
                          android:paddingLeft="20dp"
                          android:paddingRight="20dp"
                          android:layout_margin="2dp"
                          android:text="@string/more"
                          android:gravity="center"
                          android:background="@color/crunchbase_light_pressed"
                          android:layout_alignParentBottom="true"
                          android:layout_alignParentRight="true"/>

            </com.github.zyro.crunchbase.util.ExpandablePanel>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>